--- a/build.gradle
+++ b/build.gradle
@@ -16,7 +16,7 @@ dependencies {
     testImplementation('org.junit.jupiter:junit-jupiter')
     testCompile 'org.assertj:assertj-core:3.10.0'
     testImplementation group: 'org.mockito', name: 'mockito-core', version: '2.1.0'
-
+    testImplementation group: 'org.mockito', name: 'mockito-junit-jupiter', version: '3.10.0'
 }
 
 test {
